--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 body {
   font-family: var(--font-family);
   background-color: var(--white-color);
-  padding: 32px 16px;
+  padding: 16px 10px;
 
 }
 
@@ -70,7 +70,7 @@ span.more  {
 }
 
 .header {
-    padding: 0 16px;
+    padding: 0 32px;
 }
 
 .main-content {
@@ -97,7 +97,8 @@ article[class*="box"]::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(0, 0, 0, 0.8) 100%);
+    background: url(resources/gradient.svg) no-repeat;
+    background-size: cover;
     z-index: 0;
 }
 
