changed from gradient .svg to .png to troubleshoot 404 issues

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ article[class*="box"]::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url(resources/gradient.svg) no-repeat;
+    background: url(resources/gradient@2x.png) no-repeat;
     background-size: contain;
     background-position: bottom center;
     z-index: 0;
@@ -233,6 +233,9 @@ article[class*="box"]::before {
         padding: 0;
     }
 
+    .name {
+        font-size: 1rem;
+    }
     .title {
         font-size: .8rem;
     }
