Corrected .png capitalization

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ article[class*="box"]::before {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url(resources/gradient@2x.png) no-repeat;
+    background: url(resources/Gradient@2x.png) no-repeat;
     background-size: contain;
     background-position: bottom center;
     z-index: 0;
