--- a/styles.css
+++ b/styles.css
@@ -231,13 +231,7 @@ article[class*="box"]::before {
             "members box3 box4 box5";
         max-width: 100%;
         padding: 0;
-    }
-
-    .name {
-        font-size: 1rem;
-    }
-    .title {
-        font-size: .8rem;
+        border-radius: 32px;
     }
 
 }
