--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,77 @@ article[class*="box"]::before {
     margin-bottom: 32px;
 }
 
+@media screen and (min-width: 500px) {
+    .main-content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, auto);
+        grid-template-areas: 
+            "header header"
+            "box1 box2"
+            "box3 box4"
+            "members box5";
+        max-width: 100%;
+        padding: 32px 0 0 0;
+    }
+    article[class*="box"] {
+        max-width: calc(100vw);
+        position: relative;
+        z-index: 1;
+    }
+
+    .title {
+        font-size: .8rem;
+    }
+
+    .name {
+        font-size: 1rem;
+    }
+
+    .header{
+        grid-area: header;
+        width: 100%;
+    }
+    .box-1 {
+        grid-area: box1;
+    }
+    .box-2 {
+        grid-area: box2;
+    }   
+    .box-3 {
+        grid-area: box3;
+    }
+    .box-4 {
+        grid-area: box4;
+    }   
+    .box-5 {
+        grid-area: box5;
+    }
+    .box-b {
+        grid-area: members}
+        
+.main-content:before {
+    content:"";
+    position:absolute;
+    top:0;
+    left:0;
+    bottom:0;
+    width: 100%;
+    background: url(resources/Background_decor@2x.png) no-repeat;
+    z-index: 1;
+}
+}
+
+@media screen and (min-width: 550px) {
+    .name {
+        font-size: 1.25rem;
+    }
+
+    .title {
+        font-size: 1rem;
+    }
+}
+
 @media screen and (min-width: 800px) {
     body {
         padding: 72px;
@@ -189,7 +260,7 @@ article[class*="box"]::before {
         grid-area: header;
         width: 60%;
     }
-    
+
     .box-1 {
         grid-area: box1;
     }
@@ -216,7 +287,7 @@ article[class*="box"]::before {
     }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1200px) {
     .header {
         width: 100%;
         padding: 32px;
@@ -235,8 +306,8 @@ article[class*="box"]::before {
     }
     
         article[class*="box"] {
-            width: 288px;
-            height: 288px;
+            max-width: 288px;
+            max-height: 288px;
             aspect-ratio: 1 / 1;
             position: relative;
             z-index: 1;
@@ -258,7 +329,8 @@ article[class*="box"]::before {
     }
     
         article[class*="box"] {
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
             height: 100%;
             z-index: 1;
         }
